tests/lean/eval_expr_error.lean.expected.out
eval_expr_error.lean:5:18: error: unexpected local in quotation expression
eval_expr_error.lean:8:0: error: invalid eval_expr, type mismatch
state:
⊢ true
tactic failed
1
